--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        AWS Certified Cloud Practitioner - Associate
+                        AWS Certified Cloud Practitioner
                     </li>
                 </ul>
             </div>
